# studyflow

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  drizzle.config.ts  eslint.config.mjs  index.html  main.tsx  metadata.json  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
api/: client.ts  validation.ts
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
components/feedback/: states.tsx
components/layout/: header.tsx
components/screens/: home-screen.tsx  setup-screen.tsx
components/shared/: app-runtime.tsx  transfer-sheet.tsx
components/study/: next-session-card.tsx  progress-indicator.tsx  study-card.tsx
components/ui/: bottom-sheet.tsx  button.tsx  card.tsx  dialog.tsx
db/: index.ts
db/migrations/: 0000_empty_harry_osborn.sql
db/schema/: index.ts  recurrence-rules.ts  schedule-blocks.ts  sessions.ts  settings.ts  subjects.ts  timetables.ts  (+2 more)
docs/: Architecture.md  Database-Architecture.md  Features.md  Research.md  Vision.md
hooks/: use-focus-trap.ts  use-native-notifications.ts  use-online-status.ts  use-pwa-install.ts
lib/: cloud-db.ts  logger.ts
public/: manifest.webmanifest  sw.js
repositories/: d1-studyflow.repository.ts  local-studyflow.repository.ts
services/: connectivity.service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
storage/: indexed-db.ts  types.ts
store/: engine-store.ts
sync/: sync-engine.ts  sync-queue.ts
types/: cloudflare.d.ts
workers/: index.ts
(+49 files in other folders)
