[package]
name = "studyflow"
version = "1.0.0"
description = "A calm, local-first study planner"
authors = ["StudyFlow Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-notification = "2.0.0"
